0.4.18/_sources/gallery/nD_surface.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/nD_surface.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_nD_surface.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_nD_surface.py:


nD surface
==========

Display a 3D surface

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-26



.. image-sg:: /gallery/images/sphx_glr_nD_surface_001.png
   :alt: nD surface
   :srcset: /gallery/images/sphx_glr_nD_surface_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np

    import napari

    # create the viewer and window
    viewer = napari.Viewer(ndisplay=3)

    data = np.array([[0, 0, 0], [0, 20, 10], [10, 0, -10], [10, 10, -10]])
    faces = np.array([[0, 1, 2], [1, 2, 3]])
    values = np.linspace(0, 1, len(data))

    # add the surface
    layer = viewer.add_surface((data, faces, values))

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_nD_surface.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: nD_surface.py <nD_surface.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: nD_surface.ipynb <nD_surface.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
